--- a/app/src/main/res/drawable/normal_drawable.xml
+++ b/app/src/main/res/drawable/normal_drawable.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <stroke android:width="@dimen/ranking_btn_width" android:color="@color/dark_pink"/>
+    <stroke android:width="@dimen/ranking_btn_width" android:color="@color/item_color"/>
 
     <solid android:color="@android:color/transparent"></solid>
 
