--- a/app/src/main/res/drawable/pressed_drawable.xml
+++ b/app/src/main/res/drawable/pressed_drawable.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/dark_pink"></solid>
+    <solid android:color="@color/item_color"></solid>
 
     <corners android:topLeftRadius="@dimen/ranking_btn_rounding" android:bottomLeftRadius="@dimen/ranking_btn_rounding" />
 
