--- a/app/src/main/res/layout/contact_item.xml
+++ b/app/src/main/res/layout/contact_item.xml
@@ -12,7 +12,7 @@
         android:id="@+id/tvEmail"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="11"
+        android:layout_weight="10"
         android:gravity="center"
         tools:text="Email" />
 
@@ -23,6 +23,14 @@
         android:layout_weight="10"
         android:gravity="center"
         tools:text="Phone" />
+
+    <TextView
+        android:id="@+id/tvDictionary"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="10"
+        android:gravity="center"
+        android:text="calculating.."/>
 
     <TextView
         android:id="@+id/tvPrice"
